<resources>
    <string name="app_name">Furry Friends</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="login_to_app">Login to your account</string>
    <string name="new_user_signup">New User? <u>Sign Up</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create a new account</string>
    <string name="already_have_account">Already have an account? <u>Sign-In</u></string>
    <string name="listing">Listing</string>
    <string name="donate">Donate</string>
    <string name="first_aid">First Aid</string>
    <string name="training">Training</string>
    <string name="profile">Profile</string>
    <string name="welcome">WELCOME</string>
    <string name="select_image">Select Image</string>
    <string name="contact_details">Contact Details</string>
    <string name="your_location">Your Location</string>
    <string name="your_name">Your Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_location">Enter Location</string>
    <string name="update_profile">Update Profile</string>
    <string name="favorite_description">Description of favorite icon</string>
    <string name="select_pet_image">Select Pet Image</string>
    <string name="location">Location</string>
    <string name="favorite">Favorite</string>
    <string name="todo">TODO</string>
    <string name="search_for_pets_stuff">Search</string>
</resources>