<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:scaleType="centerCrop"
        android:layout_below="@id/ivProductImage"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProductImage"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="sans-serif"
        android:text="@string/select_image"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnSelectImage"
        android:layout_marginTop="2dp"
        android:autofillHints=""
        android:hint="@string/product_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etProductName"
        android:hint="@string/product_description"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etDescription"
        android:hint="@string/your_name"
        android:autofillHints="@string/your_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etUsername"
        android:hint="@string/your_location"
        android:autofillHints="Location"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/etContact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/etLocation"
        android:hint="@string/contact_details"
        android:autofillHints="Phone"
        android:inputType="phone" />

    <RelativeLayout
        android:id="@+id/btnDonateContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContact"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground"
        android:padding="16dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnDonate"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/donate" />

    </RelativeLayout>

</RelativeLayout>
