<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <!-- App Title -->
    <!-- Buttons -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/listing_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:text="@string/listing"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/donate_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:text="@string/donate"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/first_aid_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:text="@string/first_aid"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/training_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:text="@string/training"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:text="@string/profile"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>