<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg1"
    tools:context=".SetupProfileActivity">

    <TextView
        android:id="@+id/s_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="PROFILE"
        android:textSize="36sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_title"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/contactNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_contact_number"
        android:inputType="phone"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactNumberEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_location"
        android:padding="10dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/updateProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/locationEditText"
        android:text="@string/update_profile"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"/>

</RelativeLayout>
