<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_to_app"
            android:textSize="24sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="HardcodedText"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:hint="@string/email_address"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/color_primary"
            android:textColor="@android:color/white"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_user_signup"
            android:textSize="18sp"
            android:padding="10dp"
            android:textStyle="normal"
            android:textColor="@color/black"
            tools:ignore="HardcodedText"/>
    </LinearLayout>
</RelativeLayout>
