<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <!-- Product Image ImageView -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <!-- Product Name TextView -->
    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/product_image"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/product_name" />

    <!-- Product Description TextView -->
    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:text="@string/product_description"/>

    <!-- Location TextView -->
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:text="@string/location"/>

</RelativeLayout>
